feat: replace list-all with keyset (cursor-based) pagination
Replaces getAllCustomers() with getCustomers(Long afterId, int limit) using
a JPQL keyset query (WHERE id > :afterId ORDER BY id ASC). Returns a
CustomerPageResponse with data, nextCursor, hasMore, and limit fields.
API: GET /customers?limit=N&after=<cursor>